--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
         <script src="scripts/controllers/postview.js"></script>
         <script src="scripts/controllers/nav.js"></script>
         <script src="scripts/services/posts.js"></script>
+        <script src="scripts/filters/url.js"></script>
 
         <!-- endbuild -->
 </body>
